# jinterner

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  codecov.yml  lints.yml  rustdoc.yml  semver.yml  tests.yml
src/: delta.rs  detail.rs  lib.rs
src/detail/: de.rs  mapping.rs  mod.rs  ser.rs
