[package]
name = "jinterner"
description = "Efficient and concurrent interning of JSON data"
version = "0.1.1"
authors = ["Guillaume Endignoux <ggendx@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gendx/jinterner"
categories = ["caching", "encoding", "memory-management", "concurrency"]
keywords = ["arena", "interning", "interner", "json"]
exclude = [".github/*"]
edition = "2024"
rust-version = "1.85.0"

[package.metadata.docs.rs]
features = ["get-size2", "serde"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
default = []
get-size2 = ["dep:get-size2", "blazinterner/get-size2"]
serde = ["dep:serde", "dep:serde_tuple", "blazinterner/serde"]

[dependencies]
get-size2 = { optional = true, version = "0.7.3", features = ["derive"] }
blazinterner = { version = "0.1.0", features = ["raw"] }
ordered-float = { version = "5.1.0", features = ["serde"] }
serde = { optional = true, version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_tuple = { optional = true, version = "1.1.3" }
